--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>My GitHub Page</title>
-</head>
-<body>
-    <h1>Hello, world!</h1>
-    <p>This is my GitHub Pages site.</p>
-</body>
+  <head>
+    <meta http-equiv="refresh" content="0; url=https://sites.google.com/view/vino-dc/home" />
+    <title>Redirecting...</title>
+  </head>
+  <body>
+    <p>If you are not redirected, <a href="https://sites.google.com/view/vino-dc/home">click here</a>.</p>
+  </body>
 </html>
